--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
         </div>
       </div>
       <div class="about-img">
-        <img src="assets/images/MINe.png" alt="Data Science Illustration">
+        <img src="assests/images/MINe.png" alt="Data Science Illustration">
       </div>
     </div>
   </section>
@@ -1189,7 +1189,7 @@
     <h2 class="section-title">My Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <img src="assets/images/Bank-account-management-featured-image.webp" class="project-img">
+        <img src="assests/images/Bank-account-management-featured-image.webp" class="project-img">
         <div class="project-content">
           <h3>Bank Account Management System</h3>
           <p>A menu-driven Python application that simulates basic banking operations such as deposits, withdrawals, balance tracking, and transaction history using Object-Oriented Programming concepts.</p>
@@ -1199,7 +1199,7 @@
           <div class="project-links">
             <a href="#" class="project-link" onclick="openModal(
               'Bank Account Management System', 
-              'assets/videos/WhatsApp Video 2025-12-17 at 17.16.11_ac97ea38.mp4', 
+              'assests/videos/WhatsApp Video 2025-12-17 at 17.16.11_ac97ea38.mp4', 
               'The Bank Account Management System is a simple console-based Python application created to understand how real-world banking operations can be implemented using basic programming concepts. The project allows a user to create an account, deposit money, withdraw money with proper balance checks, and view the transaction history. All operations are handled through a menu-driven interface, making the program easy to use and understand.This project focuses on learning Object-Oriented Programming by using a class to represent a bank account and methods to perform different actions. It also includes basic input validation to prevent invalid transactions such as negative deposits or withdrawals greater than the available balance. The project is suitable for beginners who want hands-on practice with Python, classes, conditional statements, loops, and lists.',
               ['Python']
             )">
